# binance-liquidity-measurement

./: .dockerignore  .gitignore  Dockerfile  README-zh.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml
config/: default.yaml
docs/superpowers/plans/: 2026-04-11-bliq-m1-foundation.md
docs/superpowers/specs/: 2026-04-11-binance-liquidity-measurement-design.md
src/bliq/: __init__.py  __main__.py
src/bliq/api/: server.py
src/bliq/cli/: main.py
src/bliq/data/: binance_rest.py  binance_ws.py  rate_limiter.py  storage.py  symbols.py
src/bliq/infra/: config.py  errors.py  logging.py
src/bliq/metrics/: depth.py  obi.py  slippage.py  spread.py  types.py  whale.py
src/bliq/modes/: contrarian.py  snapshot.py  watch.py
src/bliq/notify/: signal_store.py  telegram.py  ws_push.py
tests/fixtures/: orderbook_btcusdt.json
tests/integration/: test_snapshot_e2e.py
tests/unit/: test_binance_rest.py  test_config.py  test_depth.py  test_obi.py  test_rate_limiter.py  test_slippage.py  test_spread.py  test_storage.py  test_symbols.py
